# multi-storage-client

./: .cachekeep  .coderabbit.yaml  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agent-learnings.md  catalog-info.yaml  flake.nix  justfile  justfile.bak  print_env.sh  pyproject.toml  treefmt.toml
.agents/: configure-mcp.py
.agents/rules/: agent-learnings.md  project-rules.md
.agents/skills/capture-learning/: SKILL.md
.agents/skills/cloud-storage-setup/: SKILL.md
.agents/skills/fix-cve/: SKILL.md
.agents/skills/generate-spec/: SKILL.md
.agents/skills/generate-test-plan/: SKILL.md
.agents/skills/prepare-mr/: SKILL.md
.agents/skills/release-automation/: SKILL.md  reference.md
.agents/skills/research/: SKILL.md
.aistore/: README.md  prepare_sandbox.sh
.cursor/rules/: project-rules.mdc
.cursor/skills/fix-cve/: SKILL.md
.cursor/skills/release-automation/: SKILL.md  reference.md
.github/: actionlint.yaml  copy-pr-bot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yml  config.yml  documentation-request.md  documentation_request_correction.yml  documentation_request_new.yml  feature_request.md  feature_request_form.yml  submit-question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: .beta.yml  .github_pages.yml  .production.yml  .pypi.yml  .source.yml  check.yml  default_branch.yml  pull_request.yml  release.yml  slack.yml  tag.yml
.gitlab/merge_request_templates/: Release.md
.gitlab/pipelines/: .beta.yml  .production.yml  .pypi.yml  .source.yml  default_branch.yml  merge_request.yml  supply.yml  tag.yml  update.yml
.release_notes/: .unreleased.md  0.26.0.md  0.27.0.md  0.28.0.md  0.29.0.md  0.30.0.md  0.31.0.md  0.32.0.md  0.33.0.md  0.34.0.md  0.35.0.md  0.36.0.md  0.37.0.md  0.37.1.md  0.38.0.md  0.38.1.md  0.39.0.md  0.39.1.md  0.43.0.md  0.44.0.md  0.45.0.md  0.45.1.md  0.46.0.md  0.47.0.md  0.47.1.md  0.48.0.md  0.49.0.md  0.50.0.md  0.51.0.md  1.0.0.md  1.0.1.md
docs/src/: index.rst
docs/src/references/: api.rst  configuration.rst
docs/src/user_guide/: cache.rst  cli.rst  concepts.rst  installation.rst  manifests.rst  quickstart.rst  (+3 more)
multi-storage-client/: .rayignore  AGENTS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
multi-storage-client-docs/: README.md  justfile  pyproject.toml
multi-storage-client-docs/examples/: quickstart.ipynb
multi-storage-client-docs/src/: conf.py  index.rst
multi-storage-client-docs/src/references/: api.rst  checksum_support.rst  configuration.rst
multi-storage-client-docs/src/user_guide/: cache.rst  cli.rst  explorer.rst  installation.rst  libraries.rst  manifests.rst  mcp_server.rst  multi_storage_file_system.rst  presigned_urls.rst  quickstart.rst  replicas.rst  rust.rst  telemetry.rst  virtual_manifests.rst
multi-storage-client-scripts/: README.md  justfile  pyproject.toml
multi-storage-client-scripts/src/multistorageclient_scripts/cli/: __init__.py  __main__.py
multi-storage-client-scripts/src/multistorageclient_scripts/cli/check_python_api_compat/: __init__.py
multi-storage-client-scripts/src/multistorageclient_scripts/cli/publish_documentation/: __init__.py
multi-storage-client-scripts/src/multistorageclient_scripts/cli/publish_release/: __init__.py
multi-storage-client-scripts/src/multistorageclient_scripts/cli/publish_wheels/: __init__.py
multi-storage-client-scripts/src/multistorageclient_scripts/cli/release/: __init__.py
multi-storage-client-scripts/src/multistorageclient_scripts/utils/argparse_extensions/: __init__.py
multi-storage-client-scripts/src/multistorageclient_scripts/utils/httpx/auth/: __init__.py
multi-storage-client-scripts/src/multistorageclient_scripts/utils/wait/: __init__.py
multi-storage-client-scripts/tests/: test_python_api_compat.py
multi-storage-client-scripts/tests/test_multistorageclient_scripts/cli/: test_check_python_api_compat.py
multi-storage-client/.aistore/: README.md  prepare_sandbox.sh
multi-storage-client/.aws/: config  credentials.template
multi-storage-client/.cargo/: config.toml
multi-storage-client/.msc/: config.yaml
multi-storage-client/.oci/: config
multi-storage-client/.rclone/: rclone  rclone.conf
multi-storage-client/.teleport/: tbot.yaml
multi-storage-client/examples/: rdma_roundtrip.py
multi-storage-client/rust/: Cargo.toml  build.rs
multi-storage-client/rust/csrc/: cuobj_shim.cc
multi-storage-client/rust/src/: credentials.rs  cuobj.rs  lib.rs  types.rs
multi-storage-explorer/: AGENTS.md  bunfig.toml  justfile  package.json  vitest.config.js
multi-storage-file-system/: .gitignore  .golangci.yml  AGENTS.md  Dockerfile  Dockerfile.csi  Makefile  README.md  backend.go  backend_aistore.go  backend_aistore_test.go  backend_gcs.go  backend_pseudo.go  backend_pseudo_test.go  backend_ram.go  backend_ram_test.go  backend_redact_test.go  backend_s3.go  benchmark.fio  bptree.go  bptree_test.go  cache.go  cache_disk.go  cache_disk_linux.go  cache_disk_other.go  cache_disk_test.go  config.go  config_test.go  dev_setup.sh  docker-compose.yaml  fission.go  fission_test.go  fs.go  globals.go  globals_lock.go  go.mod  go.sum  http.go  install.sh  justfile  llrb.go  (+19 more)
multi-storage-file-system/csi/: README.md  go.mod  go.sum
multi-storage-file-system/telemetry/: metrics_diperiodic.go  setup.go
nix/: README.md  justfile
nix/devShells/: default.nix  python3.10.nix  python3.11.nix  python3.12.nix
reproduction/: README.md  justfile  msc_bug.py  msc_bug.yaml  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs
specs/2026-07-21-assembly-view/: assembly-workflow-user-guide.html  high-level-design.html  implementation-and-test-plan.html
src/multistorageclient/: cache.py  client.py  config.py  file.py  pathlib.py  rclone.py  replica_manager.py  retry.py  schema.py  shortcuts.py  sync.py  types.py  utils.py
src/multistorageclient_rust/: multistorageclient_rust.pyi
tests/test_mscp/: README.md  test_mount.sh  test_observability.sh
(+315 files in other folders)
