[build-system]
requires = [
    "uv_build>=0.11.14,<0.12"
]
build-backend = "uv_build"

[project]
name = "multi-storage-client-scripts"
version = "0.0.0"
requires-python = ">=3.10,<4"
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = [
    "multi-storage-client",
    "dulwich>=1.2.1,<2",
    "githubkit>=0.15.5,<1",
    "packaging>=26.2,<27",
    "pyartifactory>=2.11.2,<3"
]

[project.scripts]
msc-scripts = "multistorageclient_scripts.cli.__main__:main"

[tool.ruff]
extend = "../pyproject.toml"

[tool.uv.build-backend]
module-name = "multistorageclient_scripts"
