[build-system]
requires = [
    "uv_build>=0.11.31,<0.12"
]
build-backend = "uv_build"

[project]
name = "multi-storage-client-scripts"
version = "0.0.0"
requires-python = ">=3.10,<4"
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = [
    "multi-storage-client",
    "dulwich>=1.2.12,<2",
    "githubkit>=0.16.0,<1",
    "httpx-retries>=0.6,<1",
    "packaging>=26.2,<27"
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10"
]

[project.scripts]
msc-scripts = "multistorageclient_scripts.cli.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
pythonpath = [
    "tests"
]
testpaths = [
    "tests"
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.uv.build-backend]
module-name = "multistorageclient_scripts"
