#
# Cargo configuration.
#
# https://doc.rust-lang.org/cargo/reference/manifest.html
#

[package]
name = "multistorageclient_rust"
edition = "2021"
publish = false

[lib]
name = "multistorageclient_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
pyo3-bytes = "0.3.0"
tokio = { version = "1.45.1", features = ["full", "macros"] }
bytes = "1.10.1"
reqwest = { version = "0.12", default-features = false }
object_store = { git = "https://github.com/dreamtalen/arrow-rs-object-store.git", branch = "msc-0.30", features = ["aws", "gcp"] }
thiserror = "2.0.12"
tempfile = "3.20.0"
chrono = "0.4.41"
regex = "1.10.0"
http = "1.4.0"
async-trait = "0.1"
# AWS SDK - disable default-https-client (uses aws-lc-rs) and use rustls-ring instead for cross-compilation
aws-config = { version = "1.8.11", default-features = false, features = ["rt-tokio", "credentials-process", "sso"] }
aws-credential-types = "1.2.10"
aws-smithy-http-client = { version = "1.1", default-features = false, features = ["rustls-ring"] }
