#
# Cargo configuration.
#
# https://doc.rust-lang.org/cargo/reference/manifest.html
#

[package]
name = "multistorageclient_rust"
edition = "2021"
publish = false

[lib]
name = "multistorageclient_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29"
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
pyo3-bytes = "0.7.1"
tokio = { version = "1.52.3", features = ["full", "macros"] }
bytes = "1.12"
reqwest = { version = "0.13.4", default-features = false }
object_store = { git = "https://github.com/dreamtalen/arrow-rs-object-store.git", branch = "msc-0.30", features = ["aws", "gcp"] }
thiserror = "2.0.18"
tempfile = "3.27"
chrono = "0.4.45"
regex = "1.12.4"
http = "1.4.2"
async-trait = "0.1.89"
# AWS SDK - disable default-https-client (uses aws-lc-rs) and use rustls-ring instead for cross-compilation.
aws-config = { version = "1.8.18", default-features = false, features = ["rt-tokio", "credentials-process", "sso"] }
aws-credential-types = "1.2.14"
aws-smithy-http-client = { version = "1.1.13", default-features = false, features = ["rustls-ring"] }
